# Aldi-Lidl-Distance

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
data/: aldi_store_urls.txt  cleaned_aldi_store_urls.txt  min_distances.txt
data/aldi_nord/: aldi_nord.csv  aldi_nord.parquet
data/aldi_sued/: aldi_sued.csv  aldi_sued.parquet
data/lidl/: lidl.csv  lidl.parquet
data/raw/aldi_nord/: aldi_nord_raw.json
data/raw/aldi_sued/: aldi_sitemap.xml  aldi_store_urls.txt  cleaned_aldi_sued_store_urls.txt
data/raw/lidl/: lidl_bing_links.txt  lidl_filialen_urls.txt
src/: extract_aldi_sued_data.ipynb
src/analysis/: min_distances.py  print_statistics.py
src/extraction/: aldi_sued_extraction.py
src/extraction/aldi_nord/: aldi_nord_extraction.py
src/extraction/aldi_sued/: aldi_sued_extraction.py  aldi_sued_url_extraction.py
src/extraction/lidl/: lidl_address_parsing.py  lidl_url_extraction.py
