[project]
name = "aldi-lidl-distance"
version = "0.1.0"
description = "A quick project to answer the question of what the maximal distance between and Aldi and Lidl shop in the whole of Germany is."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20250611",
    "types-tqdm>=4.67.0.20250516",
]
